--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,10 +1,15 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@3.0.0/schema.json",
-	"changelog": "@changesets/cli/changelog",
+	"changelog": [
+		"@svitejs/changesets-changelog-github-compact",
+		{
+			"repo": "ollema/svelte-barcode-scanner"
+		}
+	],
 	"commit": false,
 	"fixed": [],
 	"linked": [],
-	"access": "restricted",
+	"access": "public",
 	"baseBranch": "main",
 	"updateInternalDependencies": "patch",
 	"ignore": []
